dostosowanie rejestracji i logowania do bazy danych MariaDB

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,11 @@ PORT=3000
 # DATABASE_URL="mysql://user:password@localhost:3306/gamehub"
 
 
+# testowe
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=
+DB_NAME=gamehub
+
 # Client
 VITE_API_URL="http://localhost:3000"
