--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ PORT=3000
 # testowe
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=ZAQ!2wsx
 DB_NAME=gamehub
 
 JWT_SECRET=jakis_tajny_klucz
