polaczenie bazy danych przez dockera, pobiera podstawowe dane odnośnie gier (testowe) (brak filtrowania -niedziała)

--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,11 @@ PORT=3000
 
 
 # testowe
-DB_HOST=localhost
+DB_HOST=mysql
 DB_USER=root
-DB_PASSWORD=ZAQ!2wsx
+DB_PASSWORD=root
 DB_NAME=gamehub
+PORT=3000
 
 JWT_SECRET=jakis_tajny_klucz
 # Client
