--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,12 @@
     "cors": "^2.8.5",
     "cros": "^1.1.0",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0",
+    "express": "^5.2.1",
+    "express-mysql-session": "^3.0.3",
+    "express-session": "^1.18.2",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
-    "mysql2": "^3.15.3",
-    "jsonwebtoken": "^9.0.2"
+    "mysql2": "^3.15.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
